--- a/src/makefile.gcc
+++ b/src/makefile.gcc
@@ -1,7 +1,11 @@
-#===================================================================
-#  TS 26.104 V3.0.0 2000-08
+#
+# ===================================================================
+#  TS 26.104 
+#  R99	 V3.2.0 2001-06
+#  REL-4 V4.1.0 2001-06
 #  3GPP AMR Floating-point Speech Codec  
-#===================================================================
+# ===================================================================
+#
 #
 #      File             : makefile.lnx
 #      Purpose          : gcc makefile for AMR floating point
